--- a/geometry_shapes/manual_testing.ipynb
+++ b/geometry_shapes/manual_testing.ipynb
@@ -2,14 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hey\n"
+      "54\n",
+      "36\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "0.7071067811865476\n",
+      "(0.0, 0.0)\n",
+      "False\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Circle' object has no attribute 'translate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(cirkel2\u001b[38;5;241m==\u001b[39mrektangel) \u001b[38;5;66;03m# False\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(cirkel1\u001b[38;5;241m.\u001b[39mis_inside(\u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.5\u001b[39m)) \u001b[38;5;66;03m# True\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[43mcirkel1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranslate\u001b[49m(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(cirkel1\u001b[38;5;241m.\u001b[39mis_inside(\u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.5\u001b[39m)) \u001b[38;5;66;03m# False\u001b[39;00m\n\u001b[1;32m     18\u001b[0m cirkel1\u001b[38;5;241m.\u001b[39mtranslate(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTRE\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Circle' object has no attribute 'translate'"
      ]
     }
    ],
@@ -18,12 +37,28 @@
     "from circle import Circle as circle\n",
     "from cube import Cube as cube\n",
     "from sphere import Sphere as sphere\n",
+    "from circle import Circle\n",
+    "from rectangle import Rectangle\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "sp1 = sphere(1,2,1)\n",
-    "\n",
-    "print(sp1)"
+    "cirkel1 = Circle(x=0,y=0, radius=1) # enhetscirkel\n",
+    "cirkel2 = Circle(x=1,y=1, radius=1)\n",
+    "rektangel = Rectangle(x=0,y=0,side1=1, side2=1)\n",
+    "print(cirkel1==cirkel2) # True\n",
+    "print(cirkel2==rektangel) # False\n",
+    "print(cirkel1.is_inside(0.5, 0.5)) # True\n",
+    "cirkel1.translate(5,5)\n",
+    "print(cirkel1.is_inside(0.5, 0.5)) # False\n",
+    "cirkel1.translate(\"TRE\",5) # ge ValueError med lämplig kommentar"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
