Added doc strings to all classes

--- a/geometry_shapes/manual_testing.ipynb
+++ b/geometry_shapes/manual_testing.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manually testing examples in the labb manifesto"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +19,7 @@
       "True\n",
       "False\n",
       "True\n",
-      "Circle = (5, 5, 1)\n",
+      "Circle with points x = 5, y = 5, radius = 1, an area = 3.141592653589793 and a circumference = 6.283185307179586\n",
       "False\n",
       "True\n",
       "translate numbers have to be ints or float and not str\n"
@@ -20,7 +27,7 @@
     }
    ],
    "source": [
-    "from rectangle import Rectangle as rect1\n",
+    "from rectangle import Rectangle\n",
     "from circle import Circle as circle\n",
     "from cuboid import Cuboid\n",
     "from sphere import Sphere as sphere\n",
@@ -37,27 +44,27 @@
     "    print(cirkel1==cirkel2) # True\n",
     "    print(cirkel2==rektangel) # False\n",
     "    print(cirkel1.is_inside(0.5, 0.5)) # True\n",
-    "\n",
     "    cirkel1.translate(5,5)\n",
     "    print(cirkel1)\n",
     "    print(cirkel1.is_inside(0.5, 0.5)) # False\n",
     "    print(cirkel1.is_unit_circle())\n",
     "    cirkel1.translate(\"TRE\",5) # ge ValueError med lämplig kommentar\n",
     "    \n",
+    "    \n",
     "except TypeError as err:\n",
     "    print(err)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Plotting the graphs in jupyter"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +82,6 @@
     "from circle import Circle\n",
     "from rectangle import Rectangle\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
     "\n",
     "\n",
     "rect1 = Rectangle(2,2,3,5)\n",
