added plotted 2D shapes to assets directory

--- a/geometry_shapes/manual_testing.ipynb
+++ b/geometry_shapes/manual_testing.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +96,7 @@
     "ax.spines['left'].set_position('zero')\n",
     "ax.spines['right'].set_color('none')\n",
     "ax.spines['bottom'].set_position('zero')\n",
+    "plt.savefig(\"./assets/2D_shapes\")\n",
     "\n",
     "plt.show()"
    ]
